# job-search-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  config.py  index.html  main.py  pyproject.toml
.github/workflows/: deploy.yml
agents/: __init__.py  dedup_filter.py  exporter.py  fetch_adzuna.py  fetch_jsearch.py  orchestrator.py  scorer.py
auth/: __init__.py  google_oauth.py
tests/: test_dedup.py  test_scorer.py
