[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-agent"
version = "0.1.0"
description = "Agentic job search tool with Claude scoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-storage>=2.16.0",
    "google-cloud-kms>=2.21.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "openpyxl>=3.1.2",
    "pypdf>=4.2.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"